# imageDetectionModel

./: CMakeLists.txt  README.md
include/: main.h
src/: locustDetect.cpp  main.cpp
src/droneControls/: droneControl.cpp
src/resources/: stage0.xml
